--- a/src/app/home.module.scss
+++ b/src/app/home.module.scss
@@ -1,21 +1,47 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
+
 #container {
   margin-left: 0;
   margin-right: 0;
-  display: grid;
-  grid-template-rows: auto auto;
-  top: 50;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  margin-top: 5rem;
+  min-height: 100vh;
 
   h1 {
     text-align: center;
-    font-size: calc(1rem + 1vw);
-    font-weight: 600;
+    font-size: calc(2rem + 2vw);
+    font-weight: 500;
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-content: center;
   }
 
   .imgCon {
-    margin-right:auto;
+    margin-right: auto;
     margin-left: auto;
     background-color: white;
     padding: 16px;
     box-shadow: 0px 0px 1rem;
+    width: auto;
+    height: auto;
+
+    &:nth-child(1) {
+      transform: rotate(-5deg);
+    }
+
+    &:nth-child(2) {
+      transform: rotate(5deg);
+    }
+    &:nth-child(3) {
+      transform: rotate(-5deg);
+    }
   }
 }
